lintian (2.5.16) UNRELEASED; urgency=low

  XXX: generate tag summary with private/generate-tag-summary

  * checks/apache2.pm:
    + [NT] Fix F-P apache2-deprecated-auth-config for
      "AllowOverride".  Thanks to Jean-Michel Vourgère
      for the report and an initial patch.
      (Closes: #717621)
  * checks/cruft.pm:
    + [NT] Skip d/README.Debian and d/README.source when
      checking for non-free licenses.  Mentions here are
      presumably just false-positives.  Thanks to
      Marcelo Jorge Vieira for the report and the initial
      patch.  (Closes: #718575)
  * checks/debhelper.{desc,pm}:
    + [NT] Remove tag for dh_pycentral being obsolete.
      Thanks to Luca Falavigna for the report.
  * checks/files.{desc,pm}:
    + [NT] Remove tag for missing dependency on
      python-central.  Thanks to Luca Falavigna for the
      report.  (Closes: #718690)
  * checks/init.d.{desc,pm}:
    + [NT] Revert init.d-script-call-internal-API for now.
      Refer to #710559 for more information.
  * checks/patch-systems.{desc,pm}:
    + [BR] Add tag for DEP-3 template descriptions.
      (Closes: #717633)
  * checks/po-debconf.{desc,pm}:
    + [NT] Fix false-positive translated-default-field for
      fields preceeded by a "true" Deb822 comment.  Thanks
      to Ron Lee for the report.  (Closes: #637881)
  * checks/scripts.pm:
    + [NT] Stop emitting package-uses-local-diversion for
      calls to dpkg-divert without --package as dpkg 1.16.0
      (Wheezy) handles this case correctly.  Thanks to
      Raphaël Hertzog for the report.  (Closes: #679132)
  * checks/systemd.pm:
    + [NT] Apply patch from Stig Sandbeck Mathisen to allow
      systemd files being symlinks to /dev/null.
      (Closes: #718563)

  * debian/changelog:
    + [NT] Correct some older tag summaries to include some
      missing tags in the entry for 2.5.11 and 2.5.12.
  * debian/copyright:
    + [NT] Add Bastien ROUCARIÈS to maintainers (as BR).

  * frontend/lintian: